--- a/index.html
+++ b/index.html
@@ -5,46 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <style>
-        .area{
-            width: 100%;
-            height: 500px;
-            line-height: 500px;
-            text-align: center;
-            margin: 25px 0;
-            cursor: pointer;
-            position: relative;
-        }
-        .bi-cloud-arrow-up{
-            font-size: 5em;
-        }
-    </style>
+    <title>Document</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="area blue lighten-3">
-            <i class="bi bi-cloud-arrow-up"></i>
-            <input dropzone="" type="file" class="hide" name="asgar" multiple>
-        </div>
-        <table class="highlight centered">
-            <thead>
-                <tr>
-                    <th>Image</th>
-                    <th>Name</th>
-                    <th>Type</th>
-                    <th>Size</th>
-                </tr>
-            </thead>
-            <tbody id="table">
-            </tbody>
-        </table>
+    <div class="dnd">
+        <i class="bi bi-cloud-arrow-up icn" style="font-size: 200px;"></i>
+        <input dropzone="" type="file" class="hide" name="" multiple style="visibility: hidden;">
     </div>
-    <script src="./assets/js/main.js"></script>
+
+    <div class="img" style="display: flex;">
+
+    </div>
+
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
